# KALKI-WAF

./: .firebaserc  .gitignore  .gitlab-ci.yml  Dockerfile  FINAL_REPORT.md  README.md  build-desktop.sh  dashboard.html  docker-compose.yml  index.html  kalki-desktop.py  kalki.py  kalki_cli.py  login.html  main.py  netlify.toml  requirements.txt  schema.sql
.github/workflows/: ci-cd.yml  ci.yml  waf-ci.yml
agents/: kalki-agent.py  mobile-agent.sh
app/: __init__.py  config.py  database.py  middleware.py  models.py  routes.py
backend/: main.py  pyproject.toml  requirements.txt
backend/scripts/: download-geoip.sh
backend/tests/: test_waf.py
backend/upstream/: server.py
backend/waf/: state.py
backend/waf/active_response/: __init__.py  engine.py
backend/waf/agents/: __init__.py  engine.py
backend/waf/api/: __init__.py  auth.py  routes.py
backend/waf/core/: logging.py  telemetry.py  websocket.py
backend/waf/db/: __init__.py  base.py  firebase.py  seed.py  sqlite.py
backend/waf/fim/: __init__.py  engine.py
backend/waf/hids/: __init__.py  engine.py
backend/waf/middleware/: __init__.py  circuit_breaker.py  inspector.py  rate_limiter.py
backend/waf/rules/: __init__.py  engine.py
backend/waf/sca/: __init__.py  engine.py
backend/waf/security/: __init__.py  graphql.py
backend/waf/siem/: __init__.py  engine.py
backend/waf/vulnerability/: __init__.py  engine.py
dataconnect/: dataconnect.yaml
datadog/: dashboard.json
frontend/: dashboard.html
tests/: test_endpoints.py  test_refactor.py  test_waf.py
waf/: config.py
waf/api/: routes.py
(+14 files in other folders)
